# NearestNeighbors

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  RELEASE.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
bench/: README.md  experiments.sh
docs/: methodology.md
examples/: README.md  __init__.py  demo_hs_dataloader.py  demo_synthetic_data_generation.py  factory.py  run_scalar.py
examples/datasets/: test_dataloader.ipynb
examples/datasets/heartsteps/: README.md  __init__.py  demo_hs_dataloader.py  loader.py  structure_hs_data.ipynb
examples/datasets/prompteval/: demo_prompteval_dataloader.py
examples/earnings/: download_data.py  predict.py
examples/heartsteps/: README.md  demo_hs_dataloader.py  plot_distribution_histogram.py  plot_error.py  plot_error_and_time.py  preprocess_data.py  run_all_scalar.py  run_distribution.py  run_heartsteps.py  run_scalar.py  run_scalar_vanilla.py  structure_hs_data.ipynb  utils.py
examples/heartsteps/slurm_scripts/: run_accuracy.sh
examples/movielens/: .gitignore  README.md  demo_movielens_dataloader.py  plot_error_and_time.py  run_scalar.py
examples/movielens/slurm_scripts/: run_accuracy.sh
examples/prompteval/: demo_prompteval_dataloader.py  ks.py  plot_dist_error.py  plot_distribution.py  plot_error_and_time.py  run_distribution.py  run_ksbyp_plot.py  run_scalar.py
examples/prompteval/slurm_scripts/: run_accuracy.sh  run_distribution.sh
examples/prop99/: README.md  demo_prop99_dataloader.py  plot_error_and_time.py  plot_sc_error.py  plot_synthetic_control.py  proposal_99.py  run_scalar.py
examples/prop99/slurm_scripts/: run_accuracy.sh  run_california.sh
examples/simulations/: README.md  compare_imputation_errors.py  comparison.py  demo_synthetic_data_generation.py  plot_error_and_time.py  plot_size_error.py  run_scalar.py
examples/simulations/OUTPUT_DIR/results/: est_errors-usvt-lbo.csv
examples/simulations/slurm_scripts/: run_accuracy.sh
old_out/results/: star_nn_train_times.csv
paper/: main.md  ref.bib
src/baselines/: __init__.py  softimpute.py  syn_nn.py
src/nearest_neighbors/: __init__.py  data_types.py  dataloader_base.py  dataloader_factory.py  dnn.py  dnn_kernel.py  dnn_wasserstein.py  dr_nn.py  drnn.py  estimation_methods.py  fit_method.py  fit_methods.py  nadaraya_watson.py  nnimputer.py  star_nn.py  ts_nn.py  vanilla_nn.py
src/nearest_neighbors/datasets/: dataloader_base.py
src/nearest_neighbors/datasets/earnings/: __init__.py  loader.py
src/nearest_neighbors/datasets/heartsteps/: __init__.py  loader.py  preprocess_data.py  structure_hs_data.ipynb
src/nearest_neighbors/datasets/movielens/: loader.py
src/nearest_neighbors/datasets/prompteval/: __init__.py  loader.py
src/nearest_neighbors/datasets/prop99/: loader.py
src/nearest_neighbors/simulations/: __init__.py  mcar.py  mnar.py  plot_star_nn_results.py  run_scalar.py  run_star_nn.py
src/nearest_neighbors/utils/: __init__.py  experiments.py  kernels.py  plotting_utils.py
src/nsquared/: aw_nn.py  estimation_methods.py  fit_methods.py
src/nsquared/utils/: experiments.py  plotting_utils.py
tests/: test_aw_nn.py  test_dr_nn.py  test_nadaraya_watson.py  test_precommit.py  test_star_nn.py  test_ts_nn.py  test_vanilla_nn.py
unconsolidated_code/: README.md  synthetic_data_fns.py
unconsolidated_code/synthetic_data_and_TSNN_R/: AISTATS_data_generators.R  AISTATS_real_life_experiment.R  AISTATS_syn_experiments_and_plot.R  AISTATS_synthetic_modules.R
(+2 files in other folders)
