[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nearest_neighbors"
requires-python = "==3.10.4"
description = ""
version = "0.1.0"
authors = [
    {name="Aashish Khubchandani", email="akk223@cornell.edu"},
    {name="Albert Gong", email="agong@cs.cornell.edu"},
    {name="Caleb Chin", email="ctc92@cornell.edu"},
    {name="Harshvardan Maskara", email="hm475@cornell.edu"},
    {name="Jacob Feitelberg", email="jef2182@columbia.edu"},
    {name="Kyuseong Choi", email="kc728@cornell.edu"},
    {name="Manit Paul", email="paulman@wharton.upenn.edu"},
    {name="Raaz Dwivedi", email="dwivedi@cornell.edu"},
    {name="Tathagata Sadhukhan", email="ts767@cornell.edu"},
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "hyperopt",
    "pre-commit",
    "ruff",
    "pytest",
    "joblib",
    "wrds",
    "requests",
    "wrds",
]

[project.urls]
Homepage = "https://github.com/aashish-khub/NearestNeighbors"
Issues = "https://github.com/aashish-khub/NearestNeighbors/issues"
Repository = "https://github.com/aashish-khub/NearestNeighbors.git"

[tool.ruff]

exclude = [
    ".git",
    "__pycache__",
    "unconsolidated_code/*",
    "docs/*",
]

lint.ignore = [
    "ANN101",
    "ANN401",
    "N801",
    "E203",
    "E266",
    "E501",
    "E741",
    "N803",
    "N802",
    "N806",
    "D400",
    "D401",
    "D104", #temporary
    "D105",
    "D415",
    "D402",
    "D205",
    "D100",
    "D101",
    "D107",
    "D203",
    "D213",
    "ANN204",
    "ANN102",
]
lint.select = ["D", "E", "F", "N", "ANN"]
lint.fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
lint.unfixable = []

[tool.pyright]
venv = ".venv"
venvPath = "."
include = ["src"]
pythonVersion = "3.10.4"
